testdata/golden/sema/valid/concurrency/task_leak_async_block.fmt
// Valid: async block implicitly joins tasks

async fn compute() -> int {
    return 42;
}

pub async fn test_async_block_leak() {
    async {
        let t = task compute();
        // No explicit await required in a scoped async block.
        let _ = t;
    };
}
