testdata/golden/sema/invalid/concurrency/task_not_awaited.fmt
// Test: spawned task is not awaited - should trigger leak detection

async fn compute() -> int {
    return 42;
}

async fn main() -> nothing {
    // This task is never awaited - should error
    let t = spawn compute();
    // scope ends without await
}
